@@ -23,6 +23,7 @@ version 0.59
 	* Zephyr fixes (thanks, Arun A. Tharuvai)
 	* Aliases in buddy ticker
 	* Perl scripts can play Gaim sounds (thanks Andrew Rodland)
+	* Internal sounds can be played by commands (thanks Lex Spoon)
 	
 version 0.58 (05/13/2002):
 	* Bulgarian translation added (Thanks, Igel Itzo)
